backend/smerp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: smerp.backend.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
    - host: smerp.frontend.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: smerp-frontend-service
                port:
                  number: 80
